[package]
name = "sx126x"
description = "A embedded-hal driver for the Semtech SX1261/2 sub-GHz radio transceiver"
version = "0.1.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/SX1261"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "radio", "lora", "semtech", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "1.0.0-alpha.11"
regiface = "0.2"

[features]
default = []
defmt = ["dep:defmt"]
